--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "portfolio2",
+  "homepage": "https://sakhile-soyingwa.github.io/Portfolio/",
+  "description": "My personal portfolio showcasing projects and skills.",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,11 +9,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build && gh-pages -d dist",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "framer-motion": "^12.23.12",
+    "gh-pages": "^6.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-syntax-highlighter": "^15.6.1"
